[package]
name = "cr-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
base64 = "0.21.5"
async-openai = "0.16.3"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
git2 = "0.18.1"
colored = "2.0.4"
